--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tauri-app",
+  "name": "elevenmemo",
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "author": "Danny Smith",
-  "copyright": "Copyright © 2025 Danny Smith. All rights reserved.",
+  "author": "Briggs Kellogg",
+  "copyright": "Copyright © 2025 ElevenLabs. All rights reserved.",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
