--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "tauri:dev": "source ~/.cargo/env && npm run tauri dev",
     "tauri:build": "npm run tauri build",
     "tauri:check": "npm run typecheck && npm run tauri build --check",
+    "tauri:ios:dev": "npm run tauri ios dev",
+    "tauri:ios:build": "npm run tauri ios build",
+    "tauri:ios:open": "npm run tauri ios open",
     "test:all": "npm run test:run && npm run rust:test",
     "check:all": "npm run typecheck && npm run lint && npm run format:check && npm run rust:fmt:check && npm run rust:clippy && npm run test:run && npm run rust:test",
     "fix:all": "npm run lint:fix && npm run format && npm run rust:fmt && npm run rust:clippy:fix",
@@ -61,6 +64,7 @@
     "@tauri-apps/plugin-log": "^2.6.0",
     "@tauri-apps/plugin-notification": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2.4.0",
+    "@tauri-apps/plugin-os": "^2.3.2",
     "@tauri-apps/plugin-process": "^2.3.0",
     "@tauri-apps/plugin-store": "^2.4.1",
     "@tauri-apps/plugin-updater": "^2.9.0",
