--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ tauri-plugin-fs = "2"
 tauri-plugin-log = "2"
 tauri-plugin-notification = "2"
 tauri-plugin-persisted-scope = "2"
+tauri-plugin-os = "2"
 tauri-plugin-process = "2"
 tauri-plugin-store = "2"
 log = "0.4"
