Rebrand Echo to Bard
- Updated app icons from bard.xcassets
- New white Bard logo using PP Neue Machina Inktrap Ultrabold
- Gold BEK logo (#EAB308) for footer
- Added PP NeueBit font for live transcription
- Typography: PP Neue Machina Inktrap (logo), PP Neue Montreal (headers), PP Neue Montreal Mono (body)
- Live transcription uses PP NeueBit, archived text uses PP Neue Montreal Mono
- Updated all references from Echo to Bard
- Updated bundle identifiers to com.bard.app
- Renamed iOS project files

--- a/src-tauri/Info.plist
+++ b/src-tauri/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>NSMicrophoneUsageDescription</key>
-    <string>Echo needs microphone access for voice transcription</string>
+    <string>Bard needs microphone access for voice transcription</string>
 </dict>
 </plist>
 
