--- a/src-tauri/gen/apple/bard.xcodeproj/xcshareddata/xcschemes/bard_iOS.xcscheme
+++ b/src-tauri/gen/apple/bard.xcodeproj/xcshareddata/xcschemes/bard_iOS.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "5202E45D3361A928DAA2E52A"
-               BuildableName = "Echo.app"
-               BlueprintName = "echo_iOS"
-               ReferencedContainer = "container:echo.xcodeproj">
+               BuildableName = "Bard.app"
+               BlueprintName = "bard_iOS"
+               ReferencedContainer = "container:bard.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -31,9 +31,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5202E45D3361A928DAA2E52A"
-            BuildableName = "Echo.app"
-            BlueprintName = "echo_iOS"
-            ReferencedContainer = "container:echo.xcodeproj">
+            BuildableName = "Bard.app"
+            BlueprintName = "bard_iOS"
+            ReferencedContainer = "container:bard.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <EnvironmentVariables>
@@ -66,9 +66,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5202E45D3361A928DAA2E52A"
-            BuildableName = "Echo.app"
-            BlueprintName = "echo_iOS"
-            ReferencedContainer = "container:echo.xcodeproj">
+            BuildableName = "Bard.app"
+            BlueprintName = "bard_iOS"
+            ReferencedContainer = "container:bard.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <EnvironmentVariables>
@@ -95,9 +95,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5202E45D3361A928DAA2E52A"
-            BuildableName = "Echo.app"
-            BlueprintName = "echo_iOS"
-            ReferencedContainer = "container:echo.xcodeproj">
+            BuildableName = "Bard.app"
+            BlueprintName = "bard_iOS"
+            ReferencedContainer = "container:bard.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <EnvironmentVariables>
