--- a/src-tauri/entitlements.plist
+++ b/src-tauri/entitlements.plist
@@ -2,7 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <!-- Hardened Runtime -->
+    <key>com.apple.security.cs.allow-jit</key>
+    <true/>
+    <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+    <true/>
+    <key>com.apple.security.cs.disable-library-validation</key>
+    <true/>
+    
+    <!-- Microphone access for transcription -->
     <key>com.apple.security.device.audio-input</key>
+    <true/>
+    
+    <!-- Network access for ElevenLabs API -->
+    <key>com.apple.security.network.client</key>
     <true/>
 </dict>
 </plist>
